# hasql-listen-notify

./: .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  hasql-listen-notify.cabal
.github/workflows/: haskell-ci.yml
src/Hasql/: ListenNotify.hs
